<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

	<ListView
	    android:id="@+id/android:list"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_above="@+id/completedorders_totalcountlabel_tv"
	    android:layout_below="@+id/completedorders_to_b"
	    android:layout_alignTop="@+id/android:empty"
	    android:layout_centerHorizontal="true" >
	</ListView>

	<TextView
	    android:id="@+id/completedorders_totalcountlabel_tv"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentBottom="true"
	    android:layout_centerHorizontal="true"
	    android:text="@string/completedorders_totalcountlabel_tv"
	    android:textAppearance="?android:attr/textAppearanceLarge" />

	<TextView
	    android:id="@+id/android:empty"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:layout_above="@+id/completedorders_totalcountlabel_tv"
	    android:layout_alignLeft="@+id/android:list"
	    android:layout_below="@+id/completedorders_to_b"
	    android:text="@string/none" />

	<TextView
	    android:id="@+id/completedorders_totalcount_tv"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentBottom="true"
	    android:layout_toRightOf="@+id/completedorders_totalcountlabel_tv"
	    android:layout_marginLeft="5dp"
	    android:text="@string/default_zero"
	    android:textAppearance="?android:attr/textAppearanceLarge" />

	<TextView
	    android:id="@+id/completedorders_fromlabel_tv"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentLeft="true"
	    android:layout_alignParentTop="true"
	    android:text="@string/completedorders_fromlabel_tv"
	    android:textAppearance="?android:attr/textAppearanceLarge" />

	<Button
	    android:id="@+id/completedorders_to_b"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:paddingLeft="10dp"
	    android:paddingRight="10dp"
	    android:layout_alignLeft="@+id/completedorders_tolabel_tv"
	    android:layout_below="@+id/completedorders_tolabel_tv"
	    android:text="@string/default_date"
	    android:background="@drawable/buttonshape"
        android:textColor="#FFFFFF"
	    android:textAppearance="?android:attr/textAppearanceMedium" />

	<Button
	    android:id="@+id/completedorders_from_b"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:paddingLeft="10dp"
	    android:paddingRight="10dp"
	    android:layout_alignLeft="@+id/completedorders_fromlabel_tv"
	    android:layout_below="@+id/completedorders_fromlabel_tv"
	    android:text="@string/default_date"
	    android:background="@drawable/buttonshape"
        android:textColor="#FFFFFF"
	    android:textAppearance="?android:attr/textAppearanceMedium" />

	<TextView
	    android:id="@+id/completedorders_tolabel_tv"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentTop="true"
	    android:layout_toRightOf="@+id/completedorders_from_b"
	    android:layout_marginLeft="25dp"
	    android:text="@string/completedorders_tolabel_tv"
	    android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>