<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ModuleActivity$DummySectionFragment" >

    <Button
        android:id="@+id/controller_shutdown_b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:text="@string/controller_shutdown_b" />

    <Button
        android:id="@+id/controller_startup_b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/controller_shutdown_b"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="20dp"
        android:text="@string/controller_startup_b" />

    <Button
        android:id="@+id/controller_emergencystop_b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/controller_shutdown_b"
        android:layout_marginTop="20dp"
        android:text="@string/controller_emergencystop_b" />

</RelativeLayout>
