<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <ImageView
        android:id="@+id/machinerow_machinetype_iv"
        android:layout_marginTop="3dp"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignBottom="@+id/machinerow_machinestatus_iv"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/machinerow_machinetype_iv"
        android:src="@drawable/robot" />

    <TextView
        android:id="@+id/machinerow_machinename_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/machinerow_machinetype_iv"
        android:layout_marginLeft="5dp"
        android:text="@string/machinerow_machinename_tv" />

    <TextView
        android:id="@+id/machinerow_machinestatus_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/machinerow_machinename_tv"
        android:layout_toRightOf="@+id/machinerow_machinetype_iv"
        android:layout_marginLeft="5dp"
        android:text="@string/machinerow_machinestatus_tv" />


    <ImageView
        android:id="@+id/machinerow_machinestatus_iv"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="3dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:src="@android:drawable/button_onoff_indicator_off"
        android:contentDescription="@string/machinerow_machinetype_iv"/>

</RelativeLayout>